1.1.9.0/_sources/Reference/NodeReference/GafferCycles/CyclesAttributes.md.txt
CyclesAttributes
================

Applies Cycles attributes to objects in the scene.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

attributes
----------

The attributes to be applied - arbitrary numbers of user defined
attributes may be added as children of this plug via the user
interface, or using the CompoundDataPlug API via python.

attributes.cameraVisibility
---------------------------

Whether or not the object is visible to camera
rays. To hide an object completely, use the
visibility settings on the StandardAttributes
node instead.

attributes.diffuseVisibility
----------------------------

Whether or not the object is visible to diffuse
rays.

attributes.glossyVisibility
---------------------------

Whether or not the object is visible in
glossy rays.

attributes.transmissionVisibility
---------------------------------

Whether or not the object is visible in
transmission.

attributes.shadowVisibility
---------------------------

Whether or not the object is visible to shadow
rays - whether it casts shadows or not.

attributes.scatterVisibility
----------------------------

Whether or not the object is visible to
scatter rays.

attributes.useHoldout
---------------------

Turns the object into a holdout matte.
This only affects primary (camera) rays.

attributes.isShadowCatcher
--------------------------

Turns the object into a shadow catcher.

attributes.shadowTerminatorShadingOffset
----------------------------------------

Push the shadow terminator towards the light to hide artifacts on low poly geometry.

attributes.shadowTerminatorGeometryOffset
-----------------------------------------

Offset rays from the surface to reduce shadow terminator artifact on low poly geometry. Only affects triangles at grazing angles to light.

attributes.maxLevel
-------------------

The max level of subdivision that can be
applied.

attributes.dicingScale
----------------------

Multiplier for scene dicing rate.

attributes.lightGroup
---------------------

Set the lightgroup of an object with emission.

attributes.volumeClipping
-------------------------

Value under which voxels are considered empty space to
optimize rendering.

attributes.volumeStepSize
-------------------------

Distance between volume samples. When zero it is automatically
estimated based on the voxel size.

attributes.volumeObjectSpace
----------------------------

Specify volume density and step size in object or world space.
By default object space is used, so that the volume opacity and
detail remains the same regardless of object scale.

attributes.dupliGenerated
-------------------------

Set a unique position offset. Accessible from a texture_coordinate
via the generated output plug and from_dupli enabled.

attributes.dupliUV
------------------

Set a unique UV offset. Accessible from either a texture_coordinate
or uv_map node via the UV output plug and from_dupli enabled.

attributes.assetName
--------------------

Asset name for cryptomatte.

attributes.useMis
-----------------

Use multiple importance sampling for this material,
disabling may reduce overall noise for large
objects that emit little light compared to other light sources.

attributes.useTransparentShadow
-------------------------------

Use transparent shadows for this material if it contains a Transparent BSDF,
disabling will render faster but not give accurate shadows.

attributes.heterogeneousVolume
------------------------------

Disabling this when using volume rendering, assume volume has the same density
everywhere (not using any textures), for faster rendering.

attributes.volumeSamplingMethod
-------------------------------

Sampling method to use for volumes.

attributes.volumeInterpolationMethod
------------------------------------

Interpolation method to use for volumes.

attributes.volumeStepRate
-------------------------

            Scale the distance between volume shader samples when rendering the volume
(lower values give more accurate and detailed results, but also increased render time).
            

attributes.displacementMethod
-----------------------------

Method to use for the displacement.

global
------

Causes the attributes to be applied to the scene globals
instead of the individual locations defined by the filter.

extraAttributes
---------------

An additional set of attributes to be added. Arbitrary numbers
of attributes may be specified within a single `IECore.CompoundObject`,
where each key/value pair in the object defines an attribute.
This is convenient when using an expression to define the attributes
and the attribute count might be dynamic. It can also be used to
create attributes whose type cannot be handled by the `attributes`
CompoundDataPlug, with `IECoreScene.ShaderNetwork` being one example.

If the same attribute is defined by both the attributes and the
extraAttributes plugs, then the value from the extraAttributes
is taken.